--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "dependencies": {
-    "node": "^17.3.0",
-    "nodeman": "^1.1.2",
-    "nodemon": "^2.0.15"
-  },
   "name": "amit",
   "version": "1.0.0",
-  "main": "creates.js",
+  "description": "",
+  "main": "even.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon even.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Amitshah9027/Amit.git"
+  },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "bugs": {
+    "url": "https://github.com/Amitshah9027/Amit/issues"
+  },
+  "homepage": "https://github.com/Amitshah9027/Amit#readme",
+  "dependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
